--- a/konachan/APP/res.qrc
+++ b/konachan/APP/res.qrc
@@ -2,5 +2,6 @@
   <qresource prefix="picture">
     <file>source/konachan_background.png</file>
     <file>source/konachan_logo.png</file>
+    <file>source/konachan_logo_small.png</file>
   </qresource>
 </RCC>
