尝试链接数据库

--- a/konachan-web/mysite/templates/kevenano.html
+++ b/konachan-web/mysite/templates/kevenano.html
@@ -1,12 +1,25 @@
-<h1>{{ hello }}</h1>
-<h2>{{ bye }}</h2>
-<p>{{dateDic}}</p>
-<p>{{dateDic.year}}</p>
-<p>{{dateDic.month}}</p>
-<p>{{dateDic.day}}</p>
-<h3>{{list}}</h3>
-<p>{{list.0}}</p>
-<p>{{list.1}}</p>
-<p>{{list.2}}</p>
-<p>{{list.3}}</p>
-<p>{{list.4}}</p>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8" />
+    <title>Django with MySql</title>
+</head>
+
+<body>
+    <h1>{{ hello }}</h1>
+    <h2>{{ bye }}</h2>
+    <p>{{dateDic}}</p>
+    <p>{{dateDic.year}}</p>
+    <p>{{dateDic.month}}</p>
+    <p>{{dateDic.day}}</p>
+    <h3>{{list}}</h3>
+    <p>{{list.0}}</p>
+    <p>{{list.1}}</p>
+    <p>{{list.2}}</p>
+    <p>{{list.3}}</p>
+    <p>{{list.4}}</p>
+    <p>{{result}}</p>
+</body>
+
+</html>
