--- a/konachan-web/mysite/statics/css/welcome.css
+++ b/konachan-web/mysite/statics/css/welcome.css
@@ -1,7 +1,3 @@
-html {
-    background-color: rgb(22, 22, 22);
-}
-
 .header,
 .navigator,
 .left-column,
@@ -28,6 +24,7 @@ html {
 #search input[type=text] {
     width: 35%;
     height: 25px;
+    font-size: 100%;
 }
 
 #search input[type="submit"] {
@@ -35,6 +32,7 @@ html {
     padding: 0px;
     border: 0px;
     width: 31px;
+    font-size: 100%;
 }
 
 
