--- a/konachan-web/mysite/statics/css/index.css
+++ b/konachan-web/mysite/statics/css/index.css
@@ -1,7 +1,13 @@
 p {
-    color: wheat;
+    color: black;
     text-align: center;
 }
+
+/* .left-column,
+.right-column,
+.middle-column {
+    height: 800px;
+} */
 
 .col {
     margin: auto;
